# llm-ensemble

./: .gitignore  LICENSE  README.md  pyproject.toml
llm_ensemble/: __init__.py  consensus.py  run_llm.py
llm_ensemble/prompts/: judge.prompt
llm_ensemble/schemas/: __init__.py  schemas.py
llm_ensemble/tests/: test_consensus.py
llm_ensemble/utils/: __init__.py  tavily_tool.py  utils.py
tests/: test_consensus.py  test_run_llm.py
